--- a/practica2_fercarm_rodsern/src/uva/ipc/practica1/vista/Vista.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica1/vista/Vista.form
@@ -127,7 +127,7 @@
     <Container class="javax.swing.JPanel" name="info1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="e9" type="rgb"/>
+          <Color blue="33" green="33" red="ff" type="rgb"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[500, 750]"/>
