--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
@@ -473,7 +473,7 @@
               <Color blue="88" green="91" red="5e" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="TREN Y N&#xda;MERO DE BILLETES"/>
+            <Property name="text" type="java.lang.String" value="tREN"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
             </Property>
