--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuPrincipal.form
@@ -9,7 +9,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -28,7 +28,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <EmptySpace min="0" pref="635" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="panelGlobal" alignment="0" pref="635" max="32767" attributes="0"/>
+              <Component id="panelGlobal" alignment="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -36,7 +36,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <EmptySpace min="0" pref="256" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Component id="panelGlobal" alignment="0" pref="256" max="32767" attributes="0"/>
+              <Component id="panelGlobal" alignment="0" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
