--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuUsuario.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMenuUsuario.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -119,7 +119,9 @@
                 </Property>
               </Properties>
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout">
+                <Property name="horizontalGap" type="int" value="50"/>
+              </Layout>
               <SubComponents>
                 <Component class="javax.swing.JButton" name="btnRecargar">
                   <Properties>
@@ -151,6 +153,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="MIS VIAJES"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMisViajesActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
