Añadido el botón de cancelar en la vista de ComprarBillete

--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaComprarBillete.form
@@ -164,10 +164,11 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="btn_intercambio" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="btnCancelar" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="347" max="32767" attributes="0"/>
+                  <EmptySpace pref="341" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -196,7 +197,10 @@
                   <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                   <Component id="lb_error1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="230" max="32767" attributes="0"/>
-                  <Component id="btn_sig_p1" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btn_sig_p1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -334,6 +338,23 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Ruta no existente"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnCancelar">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="88" green="91" red="5e" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Monospaced" size="18" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="CANCELAR"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
