Aproximación a función de devolver

--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMisViajes.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaMisViajes.form
@@ -338,6 +338,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="MODIFICAR BILLETE"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEquipajeActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
