Cambiado lo del PIN para que no aparezcan números aunque no sale con el tamaño adecuado. Modificado un pequeño error por el que no ocultaba a tiempo el mensaje de error de RecargarTarjeta

--- a/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaRecargarTarjeta.form
+++ b/practica2_fercarm_rodsern/src/uva/ipc/practica2/vista/VistaRecargarTarjeta.form
@@ -140,7 +140,7 @@
                             <Property name="text" type="java.lang.String" value="PIN:"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="PIN">
+                        <Component class="javax.swing.JPasswordField" name="PIN">
                         </Component>
                         <Component class="javax.swing.JButton" name="btnAceptarPin">
                           <Properties>
